styles.css
*{
    padding:0;
    margin:0;
    box-sizing:border-box;
}
html{
    scroll-behavior:smooth;
}
:root{
    --PRIMARY-COLOR:rgb(0, 255, 153);
}
body{
    display:grid;
    min-height: 200vh;
    grid-template:10vh 300vh/100%;
    background:black;
}
.header{
    grid-area:1/1/2/2;
    background:linear-gradient(rgb(0, 249, 211),var(--PRIMARY-COLOR));
    box-shadow:2px 2px 5px var(--PRIMARY-COLOR);
    display:flex;
} 
.main{
    display:grid;
    grid-template-rows:150vh 150vh;
    grid-template-columns:100%;
    grid-area:2/1/3/2;
}
.mainSection{
    grid-area:1/1/2/2;
    opacity:.9;
    background-repeat:no-repeat;
    background-image:url(https://st2.depositphotos.com/40244300/42948/v/450/depositphotos_429482554-stock-illustration-dark-blue-vector-gradient-blur.jpg);
background-size:cover;
}
.mainSectionTwo{
    grid-area:2/1/3/2;
    background:radial-gradient( rgb(21, 21, 21), black);
    display:flex;
    justify-content:center;
    align-items:center;
}
.mainSectionTwoPanel{
    display:grid;
    border-radius:10px;
    grid-template:10% 90%/100%;
    height:500px;
    width:800px;
    background-color:rgb(55, 54, 54);
    box-shadow:0px 0px 10px white;
}
.mainSectionTwoPanelUp{
    grid-area:1/1/2/2;
    border-radius:10px 10px 0px 0px;
    background-color:rgb(44, 43, 43);
    display:flex;
    justify-content:flex-start;
    padding:10px;
    gap:10px;
    align-items:center;
}
.mainSectionTwoPanelUpCircles{
width:20px;
height:20px;
border-radius:50%;
}
#red{
   background-color:red;
}
#yellow{
    background-color:yellow;
 }
 #green{
    background-color:rgb(0, 168, 0);
 }
 .mainSectionTwoPanelDown{
    background-image:url(https://static.vecteezy.com/system/resources/thumbnails/006/299/489/original/green-binary-code-streaming-down-and-rotate-row-digital-number-matrix-background-concept-of-technology-hacker-computer-algorithm-programmer-hud-interface-and-coding-futuristic-software-video.jpg);
    background-size:cover;
    grid-area:2/1/3/2;
    display:flex;
    align-items:flex-end;
    justify-content:center;
    border-radius:0px 0px 10px 10px;
    position:relative;

 }
 
#mainSectionTwoPanelDownImg{
    filter:drop-shadow(0px 0px 10px black);
    height:550px;
    transition:.2s all ease;
    filter:hue-rotate(180deg) sepia(75%) contrast(150%) saturate(300%) hue-rotate(180deg) grayscale(.4);

}

.mainSectionTwoPanelDownTitle{
    color:white;
    font-size:13rem;
    position:absolute;
    white-space:nowrap;
    font-weight:800;
    text-shadow:1px 1px 20px black;
}
#mainSectionTwoPanelDownTitleOne{
    top:0;
    transform:translateX(-1480px);
    animation:none;
    
}
#mainSectionTwoPanelDownTitleTwo{
    font-size:15rem;
    color:var(--PRIMARY-COLOR);
    transform:translateX(1550px);
    animation:none;
    
}
@font-face {
    font-family:"Azonix";
    src: url(fonts/Azonix.otf);
}
@keyframes entering-left{
    0%{transform: translateX(-1480px) rotateX(180deg);
    opacity:0;}
    100%{transform:rotateX(0deg)   translateX(-80px);
    opacity:1;}
}
@keyframes entering-right{
    0%{transform:rotateX(180deg) translateX(1550px);
    opacity:0;}
    100%{transform:rotateX(0deg)  translateX(100px);
    opacity:1;}
    
}

